	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12016 Speed Increasing Potion: A potion which increases the moving speed of a character for a duration.
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
05/03
	* Removed all Novice Job bonusses [Playtester]
	* Reverted the changes to Killer Mantis and Demon Pungus card [Playtester]
	- the base effect rate is 20%, but target's defense can lower the rate
	* Fixed bugs in every New Card with getrefine() check [Lupus]
	- optimized some IF() conditions of the new cards
	- temp fix of getrefine bonus 4379,Blue_Acidus_Card (probably item desc is wrong)
05/02
	* Corrected Desperado ammo consumption (should be 10) [Skotlex]
	* Lowered all card drop rates to 0.01% as they are in Aegis X.2 [Playtester]
	* Updating old/wrong mob drops to Aegis X.2 drops [Playtester]
	- progress 10%
	* Changed the prices of the ninja stones according to official. [erKURITA]
	* Linking skills now have their cast-time reduced by dex. [Skotlex]
	* Lowered the duration of Speed Potion to 5 seconds [Playtester]
	- now it's doubled speed for 5 seconds
05/01
	* Fixed Jump Kick's range to 9. [Skotlex]
	* Modified the AM_TWILIGHT* skills to require 200 medicine bowls. [Skotlex]
	* Added effect of Speed Potion [Playtester]
	* Removed Kraben Card drop from G_Kraben [Playtester]
	* Fixed a typo in the Armeyer Dinze card thanks to theultramage [Playtester]
04/30
	* Changed TK_RUN's state from none to move_enable. [Skotlex]
	* Added Hellion Revenant [Playtester]
	- his skills are still missing
	* Changed chance of Demon Pungus Card and Killer Mantis Card to 10% [Playtester]
	* Final updates for Bio Lab drop rates thanks to Muad_Dib [Playtester]
	- they should be official to 99% now
	* Updated Bio Lab drop rates to Aegis X.2 thanks to Muad_Dib [Playtester]