@@ -4,6 +4,9 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/05/03
+	* Kaite, Kaute will now show a skill effect when they trigger. [Skotlex
+	* Knowledge will now only trigger if you logon to the memorized map, not
+	  walk into it. [Skotlex]
 	* Corrected @whomap directly invoking msg_table[] rather than msg_txt()
 	  [Skotlex]
 	* Guessed where the pet data goes in spawn packet 0x7c. This may be wrong
