@@ -700,7 +700,7 @@
 //SG_KNOWLEDGE
 443,0,0,0,600000,0
 //SG_FUSION
-444,1000,1000,0,600000,0
+444,0,1000,0,600000,0
 //==========================================
 
 //===== Soul Linker ========================
